# aegis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AEGIS_AUDIT_20260630.md  CHANGELOG.md  Caddyfile  DEPLOY.md  DESIGN.md  Dockerfile.hotpatch  Dockerfile.prod  INSTALL.md  LICENSE  Makefile  README.md  STATUS.md  docker-compose.aegis.yml  env.aegis.example  loki-config.yaml  otel-collector-config.yaml  print_routes.py  promtail-config.yaml  pyproject.toml
.github/workflows/: ci.yml
aegis-agent/: README.md  pyproject.toml
aegis-agent/aegis_agent/: __init__.py  _collector.py  _loop.py  _reporter.py  main.py
aegis-agent/tests/: conftest.py  test_collector.py  test_loop.py  test_reporter.py
aegis-autoheal-sdk/: README.md  pyproject.toml
aegis-autoheal-sdk/aegis_autoheal_sdk/: __init__.py
aegis-autoheal-sdk/tests/: test_sdk.py
aegis-plugins/: pyproject.toml
aegis-plugins/aegis_plugins/: __init__.py  _url_safety.py
aegis-plugins/aegis_plugins/plugins/: __init__.py  cleanup_disk.py  clear_queue.py  drain_node.py  flush_cache.py  http_management.py  notify_oncall.py  reconnect_db.py  restart_container.py  restart_service.py  rotate_credentials.py  scale_down.py  stubs.py
aegis-plugins/tests/: conftest.py  test_http_management.py  test_plugins.py  test_url_safety.py
aegis/cli/: main.py
aegis/server/: app.py  exceptions.py
aegis/server/alert/: platform_alerter.py
aegis/server/api/: deps.py
aegis/server/api/routers/: alert_fired.py  alert_rules.py  alerts.py  apps.py  audit.py  auth.py  autoheal.py  autoheal_policies.py  backup_storage.py  backups.py  brain.py  channels.py  correlation.py  databases.py  docker.py  domains.py  edge.py  envelope.py  events.py  files.py  firewall.py  git_deploy.py  gpu_lock.py  health.py  incidents.py  invite.py  k8s.py  loki.py  metrics.py  nodes.py  ollama_gateway.py  oncall.py  (+21 more)
aegis/server/appstore/: __init__.py  installer.py
aegis/server/auth/: __init__.py  dependencies.py  exceptions.py  jwt_service.py  password_service.py  rbac.py
aegis/server/autoheal/: __init__.py  engine.py
aegis/server/brain/: __init__.py  action_planner.py  rca.py  triage.py
aegis/server/dispatch/: __init__.py  budget_tracker.py  dedup_cache.py  omodul_dispatcher.py
aegis/server/edge/: __init__.py  caddy.py
aegis/server/engines/: alert_engine.py  error_aggregator.py  error_alerter.py  error_ingestor.py  release_gate_service.py  webhook_dispatcher.py
aegis/server/lib/: sentry_auth.py  sentry_envelope.py  ssrf.py  tokens.py
aegis/server/middleware/: __init__.py  rate_limit.py  request_id.py  security_headers.py
aegis/server/models/: __init__.py  membership.py  node.py  org.py  project.py  user.py
aegis/server/orchestration/: __init__.py  alert_escalation.py  alert_evaluation.py  autoheal.py  brain.py  capacity.py  cron.py  event_correlator.py  postmortem.py
aegis/server/persistence/: __init__.py  audit.py  db.py  event_trail.py  migrations.py  retention.py
aegis/server/plugins/: __init__.py  registry.py
aegis/server/repositories/: __init__.py  alert_fired_repository.py  alert_rule_repository.py  autoheal_event_repository.py  error_event_repository.py  error_issue_repository.py  membership_repo.py  org_repo.py  project_repo.py  release_gate_repository.py  revoked_token_repo.py  user_repo.py  webhook_delivery_repository.py  webhook_subscription_repository.py
aegis/server/runtime/: config.py  logging.py  plan_quotas.py  plugin_loader.py
aegis/server/schemas/: __init__.py  alerting.py  error_monitoring.py  project_health.py  release_gate.py  webhook.py
aegis/server/services/: __init__.py  anomaly.py  anomaly_scan.py  autoheal_policy.py  change_freeze.py  cloudflare.py  compose_drift.py  disk_reclaim.py  embeddings.py  files.py  git_deploy.py  gpu_lock.py  gpu_processes.py  incident_correlation.py  install_app.py  llm.py  llm_cost.py  metric_recording.py  metrics_scraper.py  ollama_gateway.py  oncall.py  platform_flags.py  project_discovery.py  prometheus_parse.py  remediation_learning.py  remote_backup.py  runbook.py  runbook_indexer.py  runbook_store.py  secrets_vault.py  self_backup.py  site_scaffold.py  stale_task_reaper.py  uptime_prober.py  vector_store.py
aegis/tests/: conftest.py  test_alert_engine.py  test_alert_engine_webhook_integration.py  test_alert_escalation.py  test_alert_evaluation.py  test_alert_fired_repository.py  test_alert_rule_repository.py  test_alert_rules_router.py  test_anomaly.py  test_api_apps_error_capture.py  test_api_docker_apps_domains.py  test_api_edge_routes.py  test_api_events.py  test_api_health.py  test_api_invite.py  test_api_metrics.py  test_api_metrics_top_series.py  test_api_runbooks.py  test_app_install_node_teardown.py  test_app_install_realdeploy.py  test_app_lifecycle.py  test_app_lifecycle_exec.py  test_audit_log.py  test_auth.py  test_autoheal.py  test_autoheal_approval.py  test_autoheal_engine.py  test_autoheal_event_repository.py  test_autoheal_kill_switch_api.py  test_autoheal_policy.py  test_autoheal_safety.py  test_backups.py  test_brain.py  test_budget_tracker.py  test_change_freeze.py  test_compose_drift.py  test_compose_install.py  test_config.py  test_cron_deadman.py  test_cron_delivery_loop.py  (+91 more)
aegis/tests/appstore/: test_installer.py
aegis/tests/autoheal/: test_engine.py
aegis/tests/brain/: test_action_planner.py  test_rca.py  test_triage.py
aegis/tests/e2e/: test_install_flow.py
aegis/tests/edge/: test_caddy.py
aegis/tests/smoke/: test_install_e2e.py  test_real_install_smoke.py
docs/: M1_TRIAL.md  PROD_DEPLOY.md  PROJECT_HEALTH_SPEC.md  SELF_CHECK_C0.md  backlog.md  wiki_feedback_2026-05-24.md
docs/adr/: ADR-002-event-trail-retry-semantics.md  ADR-004-managed-sites-scope.md
docs/sdk-integration/: README.md  aegis.md  helios.md  helixa.md  python-template.md  tide.md  troubleshooting.md
scripts/: c3_e2e_trigger.py  check_loop_idempotent.sh  check_no_codename.sh  check_no_hardcoded_path.sh  check_no_inline_secret.sh  check_outbox_consumer_idempotent.sh  check_skip_baseline.sh  check_telemetry_retention.sh  deploy-console.sh  stage-docker-cli.sh
(+2 files in other folders)
