[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — AI-powered self-hosted PaaS (AIOps + Docker + AppStore + Caddy)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Aegis Project"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "PyYAML>=6.0",

    # 3O 主库依赖
    "obase>=0.7.0",
    # transitive dep of obase.text.fuzzy_match (obase 0.7.0+), aegis 显式声明保险
    "rapidfuzz>=3.0",
    "oprim>=2.20.0",
    "oskill>=3.0",
    "omodul>=1.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.23",
]
dev = [
    "aegis[test]",
    "pre-commit>=3.6.0",
    "ruff>=0.9.0",
    "mypy>=1.10",
]
smoke = [
    "aegis[test]",
    "testcontainers[postgres]>=3.7.0",
    "docker>=6.0",
    "fakeredis>=2.0",
]

[project.scripts]
aegis = "aegis.cli.main:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["aegis/tests"]

[tool.coverage.run]
source = ["aegis"]
branch = true
omit = ["aegis/tests/*", "aegis/cli/*", "aegis/server/services/llm.py", "aegis/server/services/runbook.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "obase.*", "oprim.*", "oskill.*", "omodul.*", "testcontainers.*", "docker.*", "redis.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "PT", "SIM"]
ignore = ["ANN401", "B008"]
