[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — AI-powered self-hosted PaaS (AIOps + Docker + AppStore + Caddy)"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [{name = "Aegis Project"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "PyYAML>=6.0",

    # 3O 主库依赖 — VCS specifiers pin to exact git tag SHA (dependency-confusion-safe)
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.11.0",
    # transitive dep of obase.text.fuzzy_match (obase 0.7.0+), aegis 显式声明保险
    "rapidfuzz>=3.0",
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v2.35.0",
    "alembic>=1.13",
    "python-frontmatter>=1.0",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v2.15.0",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.22.0",
    "oservice @ git+ssh://git@github.com/helios-plat/oservice.git@v0.4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.23",
]
dev = [
    "aegis[test]",
    "pre-commit>=3.6.0",
    "ruff>=0.9.0",
    "mypy>=1.10",
]
smoke = [
    "aegis[test]",
    "testcontainers[postgres]>=3.7.0",
    "docker>=6.0",
    "fakeredis>=2.0",
]
c3-e2e = [
    "sentry-sdk[fastapi]>=2.0",
]

[project.scripts]
aegis = "aegis.cli.main:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["aegis/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["aegis"]
branch = true
omit = ["aegis/tests/*", "aegis/cli/*", "aegis/server/services/llm.py", "aegis/server/services/runbook.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
python_version = "3.14"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "obase.*", "oprim.*", "oskill.*", "omodul.*", "oservice.*", "testcontainers.*", "docker.*", "redis.*"]
ignore_missing_imports = true

[tool.uv]
# oservice v0.4.2 internally pins obase@v0.9.0; override forces full tree to v0.11.0
# safe only if obase v0.11.0 is backward-compatible with oservice v0.4.2 API surface
override-dependencies = [
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.11.0",
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v2.35.0",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v2.15.0",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.22.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "PT", "SIM"]
ignore = ["ANN401", "B008"]
