[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — AI-powered self-hosted PaaS (AIOps + Docker + AppStore + Caddy)"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [{name = "Aegis Project"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "PyYAML>=6.0",
    # Brain/RCA/Triage 默认 LLM provider. 必须显式声明: register_providers() 里
    # `import anthropic` 之前是 try/except ImportError 静默跳过 → 镜像没装时整条
    # Brain 链路静默降级为 stub (生产已观测到)。
    "anthropic>=0.40",

    # 3O 主库依赖 — VCS specifiers pin to exact git tag SHA (dependency-confusion-safe)
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.19.1",
    # transitive dep of obase.text.fuzzy_match (obase 0.7.0+), aegis 显式声明保险
    "rapidfuzz>=3.0",
    # obase.migration 在 import 时 `from alembic import command`，但 obase 未声明该依赖。
    # aegis 自身不用 alembic，但不显式声明会导致 `import obase` 直接失败（之前被陈旧
    # uv.lock 掩盖）。这不是死依赖，勿删。
    "alembic>=1.13",
    # 同类坑：obase.docker.client 在 import 时 `import docker`（docker-py SDK），但 obase
    # 未声明该依赖。此前只声明在 [smoke] 可选组，本地 dev/test venv 因此侥幸装了，直到
    # 生产镜像（--no-dev 构建）才暴露 ModuleNotFoundError。aegis 编排层（autoheal 等）
    # 无条件 import 依赖此链路，故必须是主依赖，非可选。
    "docker>=6.0",
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v3.19.0",
    # 同类坑第三例:aegis.server.services.vector_store 无条件 import oprim.LanceDBVectorDB
    # (Brain RCA runbook 检索链路),它需要 lancedb,但 oprim 只把 lancedb 声明在自己的
    # [storage]/[full] 可选 extra 里(uv 0.11.26 对 VCS 依赖的 extras 解析不进 uv.lock,
    # 试过 oprim[storage] 无效)。此前本地 dev venv 有 lancedb 全靠一次手动装的残留
    # (未记入 uv.lock),生产镜像重建才暴露 ModuleNotFoundError。直接声明,绕开 extras。
    "lancedb>=0.17",
    "python-frontmatter>=1.0",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v4.11.0",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.38.0",
    "oservi @ git+ssh://git@github.com/helios-plat/oservi.git@v1.3.0",
    # AutoHeal 引擎 (aegis/server/autoheal/engine.py) import 此 SDK 的基类/类型。
    # 独立姊妹仓，与 3O 同样 git+ssh 锁 tag (HELIOS_DEPLOY_KEY 覆盖 helios-plat/*)。
    "aegis-autoheal-sdk @ git+ssh://git@github.com/helios-plat/aegis-autoheal-sdk.git@v0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.23",
]
dev = [
    "aegis[test]",
    "pre-commit>=3.6.0",
    "ruff>=0.9.0",
    "mypy>=1.10",
]
smoke = [
    "aegis[test]",
    "testcontainers[postgres]>=3.7.0",
    "docker>=6.0",
    "fakeredis>=2.0",
]
c3-e2e = [
    "sentry-sdk[fastapi]>=2.0",
]

[project.scripts]
aegis = "aegis.cli.main:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["aegis/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["aegis"]
branch = true
omit = ["aegis/tests/*", "aegis/cli/*", "aegis/server/services/llm.py", "aegis/server/services/runbook.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
python_version = "3.14"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "obase.*", "oprim.*", "oskill.*", "omodul.*", "oservi.*", "testcontainers.*", "docker.*", "redis.*"]
ignore_missing_imports = true

[tool.uv]
# oservice v0.4.2 internally pins obase@v0.9.0; override forces full tree to v0.11.0
# safe only if obase v0.11.0 is backward-compatible with oservice v0.4.2 API surface
override-dependencies = [
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.19.1",
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v3.19.0",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v4.11.0",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "PT", "SIM"]
ignore = ["ANN401", "B008"]
