[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis-plugins"
version = "0.1.0"
description = "Built-in AutoHeal plugins for the Aegis platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Aegis Project"}]
keywords = ["aegis", "autoheal", "plugins", "aiops"]
dependencies = [
    "aegis-autoheal-sdk @ git+ssh://git@github.com/helios-plat/aegis-autoheal-sdk.git@v0.1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.entry-points."aegis.plugins"]
"restart-service"     = "aegis_plugins.plugins.restart_service:RestartServicePlugin"
"flush-cache"         = "aegis_plugins.plugins.flush_cache:FlushCachePlugin"
"notify-oncall"       = "aegis_plugins.plugins.notify_oncall:NotifyOncallPlugin"
"clear-queue"         = "aegis_plugins.plugins.clear_queue:ClearQueuePlugin"
"rotate-credentials"  = "aegis_plugins.plugins.rotate_credentials:RotateCredentialsPlugin"
"cleanup-disk"        = "aegis_plugins.plugins.cleanup_disk:CleanupDiskPlugin"
"restart-container"   = "aegis_plugins.plugins.restart_container:RestartContainerPlugin"
"reconnect-db"        = "aegis_plugins.plugins.reconnect_db:ReconnectDbPlugin"
"drain-node"          = "aegis_plugins.plugins.drain_node:DrainNodePlugin"
"scale-down"          = "aegis_plugins.plugins.scale_down:ScaleDownPlugin"
# stubs (20)
"kill-process"        = "aegis_plugins.plugins.stubs:KillProcessPlugin"
"compact-db"          = "aegis_plugins.plugins.stubs:CompactDbPlugin"
"rotate-logs"         = "aegis_plugins.plugins.stubs:RotateLogsPlugin"
"rebalance-cluster"   = "aegis_plugins.plugins.stubs:RebalanceClusterPlugin"
"failover-primary"    = "aegis_plugins.plugins.stubs:FailoverPrimaryPlugin"
"clear-dns-cache"     = "aegis_plugins.plugins.stubs:ClearDnsCachePlugin"
"reload-config"       = "aegis_plugins.plugins.http_management:ReloadConfigPlugin"
"evacuate-pod"        = "aegis_plugins.plugins.stubs:EvacuatePodPlugin"
"reset-circuit-breaker" = "aegis_plugins.plugins.http_management:ResetCircuitBreakerPlugin"
"throttle-traffic"    = "aegis_plugins.plugins.http_management:ThrottleTrafficPlugin"
"upgrade-container"   = "aegis_plugins.plugins.stubs:UpgradeContainerPlugin"
"backup-snapshot"     = "aegis_plugins.plugins.stubs:BackupSnapshotPlugin"
"restore-snapshot"    = "aegis_plugins.plugins.stubs:RestoreSnapshotPlugin"
"rotate-ssl-cert"     = "aegis_plugins.plugins.stubs:RotateSslCertPlugin"
"flush-sessions"      = "aegis_plugins.plugins.http_management:FlushSessionsPlugin"
"reindex-search"      = "aegis_plugins.plugins.http_management:ReindexSearchPlugin"
"compact-queue"       = "aegis_plugins.plugins.stubs:CompactQueuePlugin"
"reset-rate-limit"    = "aegis_plugins.plugins.stubs:ResetRateLimitPlugin"
"sync-replicas"       = "aegis_plugins.plugins.stubs:SyncReplicasPlugin"
"healthcheck-external" = "aegis_plugins.plugins.http_management:HealthcheckExternalPlugin"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aegis_plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
